# pyproject.toml
[project]
name = "ruldani_scanner_lexer"
version = "0.1.0"

[project.optional-dependencies]
examples = [
    "matplotlib",
    "pandas",
]

[tool.taskipy.tasks]
run-example = "python -m examples.{example}"
test-example = "pytest examples/"

# Setup development environment
dev = "pip install -e .[dev,examples]"